<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:background="@color/toolbar"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/header_text_card"
                android:backgroundTint="@color/toolbar"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                android:src="@drawable/ic_close_24" />

            <TextView
                android:id="@+id/plan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:background="@drawable/header_text_card"
                android:backgroundTint="@color/bg"
                android:gravity="center_horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/basic_plan"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/how_to_card_bcakground"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/access_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/_7_day_access"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/odds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/_5_sure_odds_daily"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/how_to_card_bcakground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/tillno"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/how_to_buy"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="5dp"
                    android:text="@string/_1_go_to_safaricom_buy_goods_amp_services"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/already_paid_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/click_here_if_already_paid"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/copy_till_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/click_here_to_copy_till_number"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_2_enter_till_no"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_5204479"
                        android:textColor="@color/basic_colorDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_3_enter_amount"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/ksh_500"
                        android:textColor="@color/basic_colorDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_4_enter_your"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pin"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/your_4_digit_pin"
                        android:textColor="@color/basic_colorDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>